# rtweekend-c-wasm

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
client/assets/: index.html
client/src/: global.d.ts  index.ts
server/: tsconfig.json
server/src/: index.ts
tools/: build-wasm.ts  build.ts  tsconfig.json
wasm/cmake/: toolchain-llvm-osx.cmake
wasm/src/: common.h  imports.h  lib.c  rt_math.h
